finished the home page

--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -10,7 +10,7 @@
 
 .copyright{
     color: white;
-    font-family: Nunito, sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 15px;
 }
 
