--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -71,7 +71,7 @@
         align-items: center;
         justify-content: space-evenly;
         width: 100%;
-        background-color: #2f3640;
+        background-color: #1a1a1b;
         margin-bottom: 100px;
     }
 
