--- a/src/screens/styles/Home.css
+++ b/src/screens/styles/Home.css
@@ -3,6 +3,7 @@
     position: relative;
     height: 100vh;
     top: 79vh;
+    margin-bottom: 100vh;
 }
 
 .content-wrapper::before {
@@ -71,6 +72,24 @@
     font-family:  pixel;
 }
 
+.stuff {
+    height: 0vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.stuff-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 0vh;
+    margin-top: -700px;
+}
+
 @media screen and (max-width: 1024px) {
     .content-wrapper {
         width: 100%;
@@ -86,4 +105,15 @@
     .learnmore {
         font-size: 30px;
     }
+
+    .stuff-container {
+        flex-direction: column;
+        align-items: center;
+        margin-top: -1800px;
+    }
+
+    .content-wrapper {
+        margin-bottom: 250vh;
+    }
+
 }
