--- a/src/components/styles/Footer copy.css
+++ b/src/components/styles/Footer copy.css
@@ -1,11 +1,11 @@
-.footer {
+.footer_copy {
   width: 100%;
   height: 100px;
   background-color: var(--theme);
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 40%;
+  margin-top: 15%;
 }
 
 .copyright {
